Added quotes to line 14 <script src='https://maps.google.com/maps/api...

--- a/src/main/resources/templates/print-trip.html
+++ b/src/main/resources/templates/print-trip.html
@@ -11,7 +11,7 @@
     <link href="/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 
-    <script src='https://maps.google.com/maps/api/js?key=AIzaSyAIhZ4DWSti3Va_4Zy5nxGnyEhaw4AF6ZI'></script>
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyAIhZ4DWSti3Va_4Zy5nxGnyEhaw4AF6ZI"></script>
     
     <link type="text/css" rel="stylesheet" th:href="@{/css/print-trip.css}" />
 </head>
