Fixed the footer

--- a/src/main/resources/templates/edit-accommodation.html
+++ b/src/main/resources/templates/edit-accommodation.html
@@ -148,24 +148,26 @@
 
 
                 </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Settings</h5>
-                    <ul>
-                        <li><a class="white-text" href="#!">Link 1</a></li>
-                        <li><a class="white-text" href="#!">Link 2</a></li>
-                        <li><a class="white-text" href="#!">Link 3</a></li>
-                        <li><a class="white-text" href="#!">Link 4</a></li>
-                    </ul>
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Connect</h5>
-                    <ul>
-                        <li><a class="white-text" href="#!">Link 1</a></li>
-                        <li><a class="white-text" href="#!">Link 2</a></li>
-                        <li><a class="white-text" href="#!">Link 3</a></li>
-                        <li><a class="white-text" href="#!">Link 4</a></li>
-                    </ul>
-                </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Team</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Maryse Arseneau</a></li>
+            <li><a class="white-text" href="#!">Jennifer Firsoff</a></li>
+            <li><a class="white-text" href="#!">Shekhar Dewan</a></li>
+            <li><a class="white-text" href="#!">Joshua Cookson</a></li>
+            <li><a class="white-text" href="#!">Isaac Lee</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">email</h5>
+          <ul>
+            <li><a class="white-text" href="#!">mgarseneau@mta.ca</a></li>
+            <li><a class="white-text" href="#!">jsfirsoff@mta.ca</a></li>
+            <li><a class="white-text" href="#!">sdewan@mta.ca</a></li>
+            <li><a class="white-text" href="#!">jacookson@mta.ca</a></li>
+            <li><a class="white-text" href="#!">ilee@mta.ca</a></li>
+          </ul>
+        </div>
             </div>
         </div>
         <div class="footer-copyright">
