--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -31,7 +31,7 @@
         <h5 class="header col s12 light">A modern responsive front-end for planning Trip reservations and itineraries,</h5>
       </div>
       <div class="row center">
-        <a href="#trips-header" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+        <a th:href="@{/login}" id="download-button" class="btn-large waves-effect waves-light orange">Access Account</a>
       </div>
       <br><br>
 
