--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Starter Template - Materialize</title>
+  <title>Sign Up</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -27,59 +27,47 @@
     <div class="container">
       <br><br>
       <div class="title">
-      <h1 class="header center orange-text">Add Trip</h1>
+      <h1 class="header center orange-text">Sign Up</h1>
       </div>
-     
-      <br><br>
+ <div class="row">
+    <form class="col s12" action="#" th:action="@{/signup/submit}" th:object="${user}" method="post">
       <div class="row">
-      <form class="col s12" action="#" th:action="@{/add/} + ${trip.id}" th:object="${trip}" method="post">
-      <div class="row">
-        <div class="input-field col s12">
-          <input placeholder="Title" id="title" type="text" class="validate" th:field="*{title}">
-          <label for="title">Title</label>
-          <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>  
-        </div>
-        </div>
-      <div class="row">
-        
-         <div class="input-field col s12">
-          <input placeholder="Destinations" id="destinations" type="text" class="validate" th:field="*{destinations}">
-          <label for="destinations">Destinations</label>
-          <span th:if="${#fields.hasErrors('destinations')}" th:errors="*{destinations}"></span>  
-        </div>     
-      </div>
-      <div class="row">
-      <div class="input-field col s6">
-          <input placeholder="Start Date" id="start" type="text" class="validate datepicker" th:field="*{start}">
-          <label for="start">Start date</label>
-          <span th:if="${#fields.hasErrors('start')}" th:errors="*{start}"></span>  
+        <div class="input-field col s6">
+          <input placeholder="First Name" id="firstName" type="text" class="validate" th:field="*{firstName}">
+          <label for="firstName">First Name</label>
+          <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>  
         </div>
         <div class="input-field col s6">
-          <input placeholder="End Date" id="end" type="text" class="validate datepicker" th:field="*{end}">
-          <label for="end">End date</label>
-          <span th:if="${#fields.hasErrors('end')}" th:errors="*{end}"></span>  
+          <input input placeholder="Last Name" id="lastName" type="text" class="validate" th:field="*{lastName}">
+          <label for="lastName">Last Name</label>
+          <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>  
         </div>
+      </div>
+      <!-- <div class="row">
+         <div class="input-field col s12">
+           <i class="material-icons prefix">phone</i>
+           
+            <input input placeholder="Phone Number" id="phoneNumber" type="tel" class="validate">
+            <label for="icon_telephone">Phone</label>
+        </div>
+      </div> -->
+      <div class="row">
+        <div class="input-field col s6">
+          <input input placeholder="Email" id="email" type="email" class="validate" th:field="*{email}">
+          <label for="email">Email</label>
+          <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>  
       </div>
       <div class="row">
-        <div class="input-field col s12">
-          <input id="description" type="text" class="validate" th:field="*{description}">
-          <label for="description">Description</label>
-          <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span> 
+        <div class="input-field col s6">
+          <input input placeholder="Password" id="password" type="password" class="validate" th:field="*{password}">
+          <label for="password">Password</label>
+          <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>  
         </div>
       </div>
-      <div class="row">
-        <div class="input-field col s12">
-        <div class="row">
-          <textarea th:field="*{notes}" id="notes" class="materialize-textarea" placeholder="Notes"></textarea>
-          <label for="notes">Notes</label>
-          <span th:if="${#fields.hasErrors('notes')}" th:errors="*{notes}"></span>
-        </div>
-      </div>
-      <input id="userID" type="hidden" class="validate" th:field="*{userID}" th:value="${user.id}">
       <div class="row">
         <div class="col s12">
           <div class="input-field inline">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Add Trip
+            <button class="btn waves-effect waves-light" type="submit" name="action">Sign Up
               <i class="material-icons right">send</i>
             </button>
           </div>
@@ -87,12 +75,10 @@
       </div>
     </form>
   </div>
-
+  
+    </div>
   </div>
-  </div>
-
-
-  <footer class="page-footer orange">
+   <footer class="page-footer orange">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
