--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -15,6 +15,7 @@
     <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Trip Planner</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/trips">Trips</a></li>
+        <li><a href="/h2" target="_blank">Database</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
