--- a/src/main/resources/templates/edit-accommodation.html
+++ b/src/main/resources/templates/edit-accommodation.html
@@ -137,45 +137,7 @@
     </div>
 
 
-    <footer class="page-footer orange">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Company Bio</h5>
-                    <p class="grey-text text-lighten-4">We are a team of college students working on this project like
-                        it's our full time job. Any amount would help support and continue development on this project
-                        and is greatly appreciated.</p>
-
-
-                </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Team</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Maryse Arseneau</a></li>
-            <li><a class="white-text" href="#!">Jennifer Firsoff</a></li>
-            <li><a class="white-text" href="#!">Shekhar Dewan</a></li>
-            <li><a class="white-text" href="#!">Joshua Cookson</a></li>
-            <li><a class="white-text" href="#!">Isaac Lee</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">email</h5>
-          <ul>
-            <li><a class="white-text" href="#!">mgarseneau@mta.ca</a></li>
-            <li><a class="white-text" href="#!">jsfirsoff@mta.ca</a></li>
-            <li><a class="white-text" href="#!">sdewan@mta.ca</a></li>
-            <li><a class="white-text" href="#!">jacookson@mta.ca</a></li>
-            <li><a class="white-text" href="#!">ilee@mta.ca</a></li>
-          </ul>
-        </div>
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container">
-                Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-            </div>
-        </div>
-    </footer>
+<div th:replace="footer :: footer">...</div>
 
 
     <!--  Scripts-->
