--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -196,43 +196,7 @@
     
     <a th:href="@{/trip/} + ${trip.id} + '/print'" id="stickylink"><i class="material-icons">print</i></a>
 
-   <footer class="page-footer orange">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">GruntMeister 5000 is a team of five 3rd and 4th year students that are trying to build a nice travel planner.</p>
-
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Team</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Maryse Arseneau</a></li>
-            <li><a class="white-text" href="#!">Jennifer Firsoff</a></li>
-            <li><a class="white-text" href="#!">Shekhar Dewan</a></li>
-            <li><a class="white-text" href="#!">Joshua Cookson</a></li>
-            <li><a class="white-text" href="#!">Isaac Lee</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">email</h5>
-          <ul>
-            <li><a class="white-text" href="#!">mgarseneau@mta.ca</a></li>
-            <li><a class="white-text" href="#!">jsfirsoff@mta.ca</a></li>
-            <li><a class="white-text" href="#!">sdewan@mta.ca</a></li>
-            <li><a class="white-text" href="#!">jacookson@mta.ca</a></li>
-            <li><a class="white-text" href="#!">ilee@mta.ca</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-        <div class="footer-copyright">
-            <div class="container">
-                Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-            </div>
-        </div>
-    </footer>
+<div th:replace="footer :: footer">...</div>
 
 
     <!--  Scripts-->
