--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -49,6 +49,7 @@
             </div>
             <div class="row center">
                 <h5 th:text="${trip.description}" class="header col s12 light"></h5>
+                <p th:text="${trip.destinations}" class="header col s12 light"></p>
                 <p th:text="${trip.notes}" class="header col s12 light"></p>
             </div>
 
