--- a/src/main/resources/templates/edit-account.html
+++ b/src/main/resources/templates/edit-account.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Sign Up</title>
+  <title>Edit Account</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -27,10 +27,10 @@
     <div class="container">
       <br><br>
       <div class="title">
-      <h1 class="header center orange-text">Sign Up</h1>
+      <h1 class="header center orange-text">Edit Account Information</h1>
       </div>
  <div class="row">
-    <form class="col s12" action="#" th:action="@{/signup/submit}" th:object="${user}" method="post">
+    <form class="col s12" action="#" th:action="@{/account/} + ${user.id} + @{/update}" th:object="${user}" method="post">
       <div class="row">
         <div class="input-field col s6">
           <input placeholder="First Name" id="firstName" type="text" class="validate" th:field="*{firstName}">
@@ -67,10 +67,10 @@
       <div class="row">
         <div class="col s12">
           <div class="input-field inline">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Sign Up
+            <button class="btn waves-effect waves-light" type="submit" name="action">Update Account
               <i class="material-icons right">send</i>
             </button>
-            <div style="color: red" th:text="${error}"></div>
+       
           </div>
         </div>
       </div>
