--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -16,9 +16,17 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="/trips">Trips</a></li>
         <li><a href="/h2" target="_blank">Database</a></li>
+        <li><a class='dropdown-trigger' href='#' data-target='dropdown1' data-beloworigin="true">
+          <i id="user_sett" class="material-icons">account_circle</i></a></li>
+        <ul id='dropdown1' class='dropdown-content'> <!-- if/unless user logged in -->
+        
+          <li><a th:href="@{/account/} + ${user.id}">Account</a></li>
+          <li><a href="#!">Logout</a></li>
+        </ul>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
+      <li><span th:text="${user.firstName}"></span></li>
         <li><a href="#">Navbar Link</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
