--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -100,7 +100,7 @@
                         <li th:each="accommodation : ${trip.accommodations}">
                             <div class="collapsible-header">
                                 <i class="material-icons">hotel</i>
-                                <span th:text="${accommodation.title}"></span>
+                                <span  th:text="${accommodation.title}"></span>
                                 <span class="badge" th:text="${#dates.format(accommodation.checkIn, 'MMM dd, yyyy')}">4</span>
                                 <span class="iconsright"><a th:href="@{/trip/} + ${trip.id} + @{/accommodation/delete/} + ${accommodation.id}" class="secondary-content"
                                 method="delete"><i class="small material-icons">delete</i></a>
@@ -113,11 +113,11 @@
                                 <p th:text="${accommodation.notes}"></p>
                                 check-in: <span th:text="${#dates.format(accommodation.checkIn, 'MMM dd, yyyy')}" />&nbsp;
                                 <br>check-out: <span th:text="${#dates.format(accommodation.checkOut, 'MMM dd, yyyy')}" /><br>
-                                <h6 th:text="@{'$' +  ${accommodation.price}}"></h6>
+                                <h6 th:if="${accommodation.price != null}"th:text="@{'$' +  ${accommodation.price}}"></h6>
                                 <br>
                                 <address>
-                                    <span th:text="${accommodation.address.civicNumber}" />&nbsp;<span th:text="${accommodation.address.street}" /><br>
-                                    <span th:text="${accommodation.address.city}" />,&nbsp;<span th:text="${accommodation.address.country}" /><br>
+                                    <span  th:text="${accommodation.address.civicNumber}" />&nbsp;<span th:text="${accommodation.address.street}" /><br>
+                                    <span  th:text="${accommodation.address.city}" />,&nbsp;<span th:text="${accommodation.address.province}" />,&nbsp;<span th:text="${accommodation.address.country}" /><br>
                                     <span th:text="${accommodation.address.code}" /><br>
                                     coordinates:&nbsp;<span th:text="${accommodation.address.latitude}" />,&nbsp;<span
                                         th:text="${accommodation.address.longitude}" /><br>
@@ -164,10 +164,10 @@
                             <div class="collapsible-body">
                                 <p th:text="${reservation.notes}"></p>
                                 Confirmation: <span th:text="${reservation.confirmation}"></span>
-                                <h6 th:text="@{'$' +  ${reservation.price}}"></h6>
+                                <h6 th:if="${reservation.price != null}" th:text="@{'$' +  ${reservation.price}}"></h6>
                                 <address>
                                     <span th:text="${reservation.address.civicNumber}" />&nbsp;<span th:text="${reservation.address.street}" /><br>
-                                    <span th:text="${reservation.address.city}" />,&nbsp;<span th:text="${reservation.address.country}" /><br>
+                                    <span th:text="${reservation.address.city}" />,&nbsp;<span th:text="${reservation.address.province}" />,&nbsp;<span th:text="${reservation.address.country}" /><br>
                                     <span th:text="${reservation.address.code}" /><br>
                                     coordinates:&nbsp;<span th:text="${reservation.address.latitude}" />,&nbsp;<span
                                         th:text="${reservation.address.longitude}" /><br>
