--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -164,6 +164,7 @@
                             <div class="collapsible-body">
                                 <p th:text="${reservation.notes}"></p>
                                 Confirmation: <span th:text="${reservation.confirmation}"></span>
+                               	<h6 th:text=" ${reservation.reserveTime}"></h6>
                                 <h6 th:if="${reservation.price != null}" th:text="@{'$' +  ${reservation.price}}"></h6>
                                 <address>
                                     <span th:text="${reservation.address.civicNumber}" />&nbsp;<span th:text="${reservation.address.street}" /><br>
