--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Starter Template - Materialize</title>
+  <title>Bourgeois Travels</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -37,10 +37,10 @@
       <br><br>
       <h1 class="header center orange-text">Trip Planner 1.0</h1>
       <div class="row center">
-        <h5 class="header col s12 light">A modern responsive front-end for planning Trip reservations and itineraries,</h5>
+        <h5 class="header col s12 light">A minimalist modern Trip Planner</h5>
       </div>
       <div class="row center">
-        <a th:href="@{/login}" id="download-button" class="btn-large waves-effect waves-light orange">Access Account</a>
+        <a th:href="@{/login}" id="download-button" class="btn-large waves-effect waves-light orange">Login</a>
       </div>
       <br><br>
 
