--- a/src/main/resources/templates/add-accommodation.html
+++ b/src/main/resources/templates/add-accommodation.html
@@ -103,6 +103,7 @@
                                 <option value="Canada">Canada</option>
                                 <option value="United States">United States</option>
                                 <option value="Denmark">Denmark</option>
+                                <option value="Other">Other</option>
                             </select>
                             <label>Country</label>
                             <span th:if="${#fields.hasErrors('address.country')}" th:errors="*{address.country}"></span>
