--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Trip Planner</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Bourgeois Travels</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/trips">Trips</a></li>
         <li><a href="/h2" target="_blank">Database</a></li>
@@ -35,7 +35,7 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">Trip Planner 1.0</h1>
+      <h1 class="header center orange-text">Bourgeois Travels 1.0</h1>
       <div class="row center">
         <h5 class="header col s12 light">A minimalist modern Trip Planner</h5>
       </div>
