--- a/src/main/resources/templates/add-accommodation.html
+++ b/src/main/resources/templates/add-accommodation.html
@@ -57,12 +57,7 @@
                             <span th:if="${#fields.hasErrors('checkOut')}" th:errors="*{checkOut}"></span>
                         </div>
                         <div class="input-field col s6">
-                            <input id="price" type="number" step="1.00" accommodation.price=parseFloat(accommodation.price).toFixed(2) class="validate" th:field="*{price}">
-                            
-                            $(':input[type="number"]').change(function(){
-     this.value = parseFloat(this.value).toFixed(2);
-});
-                            
+                            <input id="price" type="number" step="0.01" min="0" accommodation.price=parseFloat(accommodation.price).toFixed(2) class="validate" th:field="*{price}">
                             <label for="price">Price</label>
                             <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
                         </div>
