Fixed commas in accomodations

--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -128,7 +128,7 @@
                                 <br>
                                 <address>
                                     <span  th:text="${accommodation.address.civicNumber}" />&nbsp;<span th:text="${accommodation.address.street}" /><br>
-                                    <span  th:text="${accommodation.address.city}" />,&nbsp;<span th:text="${accommodation.address.province}" />,&nbsp;<span th:text="${accommodation.address.country}" /><br>
+                                    <span  th:text="${accommodation.address.city}" />&nbsp;<span th:text="${accommodation.address.province}" />&nbsp;<span th:text="${accommodation.address.country}" /><br>
                                     <span th:text="${accommodation.address.code}" /><br>
                                     coordinates:&nbsp;<span th:text="${accommodation.address.latitude}" />,&nbsp;<span
                                         th:text="${accommodation.address.longitude}" /><br>
