--- a/src/main/resources/templates/edit-accommodation.html
+++ b/src/main/resources/templates/edit-accommodation.html
@@ -39,24 +39,25 @@
                 <form class="col s12" action="#" th:action="@{/trip/} + ${trip.id} + @{/accommodation/update/} + ${accommodation.id}" th:object="${accommodation}"
                     method="post">
                     <div class="row">
-                        <div class="input-field col s6">
+                        <div class="input-field col s12">
                             <input id="title" type="text" class="validate" th:field="*{title}">
                             <label for="title">Title</label>
                             <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
                         </div>
-                        <div class="input-field col s6">
+                        
+                    </div>
+                    <div class="row">
+                    <div class="input-field col s4">
                             <input id="checkIn" type="text" class="validate datepicker" th:field="*{checkIn}">
                             <label for="checkIn">Check-in Date</label>
                             <span th:if="${#fields.hasErrors('checkIn')}" th:errors="*{checkIn}"></span>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s6">
+                        <div class="input-field col s4">
                             <input id="checkOut" type="text" class="validate datepicker" th:field="*{checkOut}">
                             <label for="checkOut">Check-out Date</label>
                             <span th:if="${#fields.hasErrors('checkOut')}" th:errors="*{checkOut}"></span>
                         </div>
-                        <div class="input-field col s6">
+                        <div class="input-field col s4">
                             <input id="price" type="number" step="0.01" class="validate" th:field="*{price}">
                             <label for="price">Price</label>
                             <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
@@ -97,14 +98,9 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s4">
-                            <select th:field="*{address.country}">
-                                <option value="" disabled selected>Choose your option</option>
-                                <option value="Canada">Canada</option>
-                                <option value="United States">United States</option>
-                                <option value="Denmark">Denmark</option>
-                            </select>
-                            <label>Country</label>
+                    <div class="input-field col s4">
+                            <input id="country" type="text" class="validate" th:field="*{address.country}">
+                            <label for="country">Country</label>
                             <span th:if="${#fields.hasErrors('address.country')}" th:errors="*{address.country}"></span>
                         </div>
                         <div class="input-field col s4">
