--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -130,9 +130,12 @@
                                     <span  th:text="${accommodation.address.civicNumber}" />&nbsp;<span th:text="${accommodation.address.street}" /><br>
                                     <span  th:text="${accommodation.address.city}" />&nbsp;<span th:text="${accommodation.address.province}" />&nbsp;<span th:text="${accommodation.address.country}" /><br>
                                     <span th:text="${accommodation.address.code}" /><br>
-                                    coordinates:&nbsp;<span th:text="${accommodation.address.latitude}" />,&nbsp;<span
-                                        th:text="${accommodation.address.longitude}" /><br>
-                                    <div style="width:100%;height:300px;" th:id="@{'accommodation-map-' + ${accommodation.id}}"></div>
+                                     
+                                    <span th:if="${accommodation.address.latitude!=null}" th:text="${accommodation.address.latitude}" />
+                                    &nbsp;
+                                    <span th:text="${accommodation.address.longitude}" /><br>
+                                    
+                                    <div th:if="${accommodation.address.latitude!=null && accommodation.address.longitude!=null}" style="width:100%;height:300px;" th:id="@{'accommodation-map-' + ${accommodation.id}}"></div>
                                     <script th:inline="javascript">
                                         /*<![CDATA[*/
                                         var map;
@@ -181,9 +184,9 @@
                                     <span th:text="${reservation.address.civicNumber}" />&nbsp;<span th:text="${reservation.address.street}" /><br>
                                     <span th:text="${reservation.address.city}"/>&nbsp;<span th:text="${reservation.address.province}" />&nbsp;<span th:text="${reservation.address.country}" /><br>
                                     <span th:text="${reservation.address.code}" /><br>      
-                                    coordinates:&nbsp;<span th:text="${reservation.address.latitude}" />,&nbsp;<span
+                                    &nbsp;<span th:text="${reservation.address.latitude}" />&nbsp;<span
                                         th:text="${reservation.address.longitude}" /><br>
-                                    <div style="width:100%;height:300px;" th:id="@{'map-' + ${reservation.id}}"></div>
+                                    <div th:if="${accommodation.address.latitude!=null && accommodation.address.longitude!=null}" style="width:100%;height:300px;" th:id="@{'map-' + ${reservation.id}}"></div>
                                     <script th:inline="javascript">
                                         /*<![CDATA[*/
                                         var map;
