register and login/logout update
-added register and login/logout functionality.
-trips only show up if logged in user created them.
-no page can be viewed unless logged in, except login page and database page.
-can edit account, but you always need to re-enter your password-need some way to handle this.
-could alter login/register page so that account menu isn't shown if not logged in.
-forgot password doesn't work. if we have time we can implement this.
-also added fix for database page--can now view all database info

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -30,7 +30,7 @@
       <h1 class="header center orange-text">Sign Up</h1>
       </div>
  <div class="row">
-    <form class="col s12" action="#" th:action="@{/signup/submit}" th:object="${user}" method="post">
+    <form class="col s12" action="#" th:action="@{/signup}" th:object="${user}" method="post">
       <div class="row">
         <div class="input-field col s6">
           <input placeholder="First Name" id="firstName" type="text" class="validate" th:field="*{firstName}">
