--- a/src/main/resources/templates/edit-account.html
+++ b/src/main/resources/templates/edit-account.html
@@ -30,7 +30,7 @@
       <h1 class="header center orange-text">Edit Account Information</h1>
       </div>
  <div class="row">
-    <form class="col s12" action="#" th:action="@{/account/} + ${user.id} + @{/update}" th:object="${user}" method="post">
+    <form class="col s12" action="#" th:action="@{/account/} + ${user.id} + @{/update-success}" th:object="${user}" method="post">
       <div class="row">
         <div class="input-field col s6">
           <input placeholder="First Name" id="firstName" type="text" class="validate" th:field="*{firstName}">
@@ -43,14 +43,6 @@
           <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>  
         </div>
       </div>
-      <!-- <div class="row">
-         <div class="input-field col s12">
-           <i class="material-icons prefix">phone</i>
-           
-            <input input placeholder="Phone Number" id="phoneNumber" type="tel" class="validate">
-            <label for="icon_telephone">Phone</label>
-        </div>
-      </div> -->
       <div class="row">
         <div class="input-field col s6">
           <input input placeholder="Email" id="email" type="email" class="validate" th:field="*{email}">
