--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -9,21 +10,12 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="/css/login.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 
 <body>
-<nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Trip Planner</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="/trips">Trips</a></li>
-      </ul>
+<header th:replace="header :: header">...</header>
 
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
 
@@ -34,19 +26,19 @@
 
       <div class="container">
         <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
-
-          <form class="col s12" action="#" th:action="@{/login/submit}" method="post" th:object="${user}">
+		 <div style="color: red" th:text="${message}"></div>
+          <form class="col s12" action="#" th:action="@{/login}" method="post" name="login" >
 
             <div class='row'>
               <div class='input-field col s12'>
-                <input class='validate' type='email' id='email' th:field="*{email}" >
+                <input class='validate' type='email' id='email' name="email" >
                 <label for='email'>Enter your email</label>
               </div>
             </div>
 
             <div class='row'>
               <div class='input-field col s12'>
-                <input class='validate' type='password' id='password' th:field="*{password}" >
+                <input class='validate' type='password' id='password' name="password" >
                 <label for='password'>Enter your password</label>
               </div>
               <label style='float: right;'>
