--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -11,36 +11,13 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Bourgeois Travels</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="/trips">Trips</a></li>
-        <li><a href="/h2" target="_blank">Database</a></li>
-        <li><a class='dropdown-trigger' href='#' data-target='dropdown1' data-beloworigin="true">
-          <i id="user_sett" class="material-icons">account_circle</i></a></li>
-        <ul id='dropdown1' class='dropdown-content'> <!-- if/unless user logged in -->
-        
-          <li><a th:href="@{/account/} + ${user.id}">Account</a></li>
-          <li><a href="#!">Logout</a></li>
-        </ul>
-      </ul>
-
-      <ul id="nav-mobile" class="sidenav">
-      <li><span th:text="${user.firstName}"></span></li>
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
+<header th:replace="header :: header">...</header>
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
       <h1 class="header center orange-text">Bourgeois Travels 1.0</h1>
       <div class="row center">
         <h5 class="header col s12 light">A minimalist modern Trip Planner</h5>
-      </div>
-      <div class="row center">
-        <a th:href="@{/login}" id="download-button" class="btn-large waves-effect waves-light orange">Login</a>
       </div>
       <br><br>
 
