--- a/src/main/resources/templates/print-trip.html
+++ b/src/main/resources/templates/print-trip.html
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-    <title>Bourgeois Travels</title>
-    
-     <!-- CSS  -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-    <link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+<head th:replace="import :: head">...</head>
 
-    <script src="https://maps.google.com/maps/api/js?key=AIzaSyAIhZ4DWSti3Va_4Zy5nxGnyEhaw4AF6ZI"></script>
-    
-    <link type="text/css" rel="stylesheet" th:href="@{/css/print-trip.css}" />
-</head>
 <body>
 <h4 th:text="${trip.title}"></h4>
 
