--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head th:replace="header :: header">...</head>	
+<head th:replace="import :: head">...</head>
 
 <body>
-    <nav class="light-blue lighten-1" role="navigation">
-        <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Trip Planner</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="/trips">Trips</a></li>
-                <li><a href="/h2" target="_blank">Database</a></li>
-            </ul>
-
-            <ul id="nav-mobile" class="sidenav">
-                <li><a href="#">Navbar Link</a></li>
-            </ul>
-            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        </div>
-    </nav>
+    <header th:replace="header :: header">...</header>
     <div class="section no-pad-bot" id="index-banner">
         <div class="container">
             <br><br>
