added trip validator
-validator to prevent end date from being set before start date when adding or editing trip

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,7 +5,7 @@
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Bourgeois Travels</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="/trips">Trips</a></li>
+        <li><a href="/">Trips</a></li>
         <li><a href="/h2" target="_blank">Database</a></li>
         <li><a class='dropdown-trigger' href='#' data-target='dropdown1' data-beloworigin="true">
           <i id="user_sett" class="material-icons">account_circle</i></a></li>
