--- a/src/main/resources/templates/add-reservation.html
+++ b/src/main/resources/templates/add-reservation.html
@@ -21,12 +21,12 @@
                     method="post">
                     <div class="row">
                         <div class="input-field col s4">
-                            <input id="title" type="text" class="validate" th:field="*{title}">
+                            <input id="title" th:required="required" type="text" class="validate" th:field="*{title}">
                             <label for="title">Title</label>
                             <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
                         </div>
                         <div class="input-field col s4">
-                            <input id="date" type="text" class="validate datepicker" th:field="*{date}">
+                            <input id="date" th:required="required" type="text" class="validate datepicker" th:field="*{date}">
                             <label for="date">Date</label>
                             <span th:if="${#fields.hasErrors('date')}" th:errors="*{date}"></span>
                         </div>
@@ -82,7 +82,7 @@
                     <h4>Address</h4>
                     <div class="row">
                         <div class="input-field col s2">
-                            <input id="civicNumber" type="number" min='0' 	class="validate" th:field="*{address.civicNumber}">
+                            <input id="civicNumber" type="number" min='0' class="validate" th:field="*{address.civicNumber}">
                             <label for="civicNumber">Civic Number</label>
                             <span th:if="${#fields.hasErrors('address.civicNumber')}" th:errors="*{address.civicNumber}"></span>
                         </div>
