--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -16,12 +16,12 @@
         <div class="input-field col s6">
           <input placeholder="First Name" id="firstName" type="text" class="validate" th:field="*{firstName}">
           <label for="firstName">First Name</label>
-          <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>  
+          <span class="errortext" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>  
         </div>
         <div class="input-field col s6">
           <input input placeholder="Last Name" id="lastName" type="text" class="validate" th:field="*{lastName}">
           <label for="lastName">Last Name</label>
-          <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>  
+          <span class="errortext" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>  
         </div>
       </div>
       <!-- <div class="row">
@@ -36,13 +36,13 @@
         <div class="input-field col s6">
           <input input placeholder="Email" id="email" type="email" class="validate" th:field="*{email}">
           <label for="email">Email</label>
-          <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>  
+          <span class="errortext" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>  
       </div>
       <div class="row">
         <div class="input-field col s6">
           <input input placeholder="Password" id="password" type="password" class="validate" th:field="*{password}">
           <label for="password">Password</label>
-          <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>  
+          <span class="errortext" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>  
         </div>
       </div>
       <div class="row">
