--- a/src/main/resources/templates/edit-reservation.html
+++ b/src/main/resources/templates/edit-reservation.html
@@ -22,24 +22,24 @@
                         <div class="input-field col s6">
                             <input id="title" type="text" class="validate" th:field="*{title}">
                             <label for="title">Title</label>
-                            <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
                         </div>
                         <div class="input-field col s6">
                             <input id="date" type="text" class="validate datepicker" th:field="*{date}">
                             <label for="date">Date</label>
-                            <span th:if="${#fields.hasErrors('date')}" th:errors="*{date}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('date')}" th:errors="*{date}"></span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s6">
                             <input id="confirmation" type="text" class="validate" th:field="*{confirmation}">
                             <label for="confirmation">Confirmation</label>
-                            <span th:if="${#fields.hasErrors('confirmation')}" th:errors="*{confirmation}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('confirmation')}" th:errors="*{confirmation}"></span>
                         </div>
                         <div class="input-field col s6">
                             <input id="price" type="number" step="0.01" class="validate" th:field="*{price}">
                             <label for="price">Price</label>
-                            <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
                         </div>
                     </div>
 
@@ -47,7 +47,7 @@
                         <div class="input-field col s12">
                             <textarea th:field="*{notes}" id="notes" class="materialize-textarea"></textarea>
                             <label for="notes">Notes</label>
-                            <span th:if="${#fields.hasErrors('notes')}" th:errors="*{notes}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('notes')}" th:errors="*{notes}"></span>
                         </div>
                     </div>
 
@@ -58,44 +58,44 @@
                         <div class="input-field col s2">
                             <input id="civicNumber" type="number" class="validate" th:field="*{address.civicNumber}">
                             <label for="civicNumber">Civic Number</label>
-                            <span th:if="${#fields.hasErrors('address.civicNumber')}" th:errors="*{address.civicNumber}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('address.civicNumber')}" th:errors="*{address.civicNumber}"></span>
                         </div>
                         <div class="input-field col s4">
                             <input id="street" type="text" class="validate" th:field="*{address.street}">
                             <label for="street">Street</label>
-                            <span th:if="${#fields.hasErrors('address.street')}" th:errors="*{address.street}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('address.street')}" th:errors="*{address.street}"></span>
                         </div>
                         <div class="input-field col s4">
                             <input id="city" type="text" class="validate" th:field="*{address.city}">
                             <label for="city">City</label>
-                            <span th:if="${#fields.hasErrors('address.city')}" th:errors="*{address.city}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('address.city')}" th:errors="*{address.city}"></span>
                         </div>
                         <div class="input-field col s2">
                             <input id="province" type="text" class="validate" th:field="*{address.province}">
                             <label for="province">Province</label>
-                            <span th:if="${#fields.hasErrors('address.province')}" th:errors="*{address.province}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('address.province')}" th:errors="*{address.province}"></span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s4">
                             <input id="country" type="text" class="validate" th:field="*{address.country}">
                             <label for="country">Country</label>
-                            <span th:if="${#fields.hasErrors('address.country')}" th:errors="*{address.country}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('address.country')}" th:errors="*{address.country}"></span>
                         </div>
                         <div class="input-field col s4">
                             <input id="code" type="text" class="validate" th:field="*{address.code}">
                             <label for="code">Postal Code</label>
-                            <span th:if="${#fields.hasErrors('address.code')}" th:errors="*{address.code}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('address.code')}" th:errors="*{address.code}"></span>
                         </div>
                         <div class="input-field col s2">
                             <input id="latitude" type="number" step="0.000001" class="validate" th:field="*{address.latitude}">
                             <label for="latitude">Latitude</label>
-                            <span th:if="${#fields.hasErrors('address.latitude')}" th:errors="*{address.latitude}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('address.latitude')}" th:errors="*{address.latitude}"></span>
                         </div>
                         <div class="input-field col s2">
                             <input id="longitude" type="number" step="0.000001" class="validate" th:field="*{address.longitude}">
                             <label for="longitude">Longitude</label>
-                            <span th:if="${#fields.hasErrors('address.longitude')}" th:errors="*{address.longitude}"></span>
+                            <span class="errortext" th:if="${#fields.hasErrors('address.longitude')}" th:errors="*{address.longitude}"></span>
                         </div>
                     </div>
 
