--- a/src/main/resources/templates/edit-trip.html
+++ b/src/main/resources/templates/edit-trip.html
@@ -18,32 +18,32 @@
         <div class="input-field col s6">
           <input placeholder="Title" id="title" type="text" class="validate" th:field="*{title}">
           <label for="title">Title</label>
-          <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>  
+          <span class="errortext" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>  
         </div>
         
         <div class="input-field col s12">
           <input placeholder="Destinations" id="destinations" type="text" class="validate" th:field="*{destinations}">
           <label for="destinations">Destinations</label>
-          <span th:if="${#fields.hasErrors('destinations')}" th:errors="*{destinations}"></span>  
+          <span class="errortext" th:if="${#fields.hasErrors('destinations')}" th:errors="*{destinations}"></span>  
         </div>
         
         <div class="input-field col s6">
           <input placeholder="Start Date" id="start" type="text" class="validate datepicker" th:field="*{start}">
           <label for="start">Start date</label>
-          <span th:if="${#fields.hasErrors('start')}" th:errors="*{start}"></span>  
+          <span class="errortext" th:if="${#fields.hasErrors('start')}" th:errors="*{start}"></span>  
         </div>
 
         <div class="input-field col s6">
           <input placeholder="End Date" id="end" type="text" class="validate datepicker" th:field="*{end}">
           <label for="end">End date</label>
-          <span th:if="${#fields.hasErrors('end')}" th:errors="*{end}"></span>  
+          <span class="errortext" th:if="${#fields.hasErrors('end')}" th:errors="*{end}"></span>  
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
           <input id="description" type="text" class="validate" th:field="*{description}">
           <label for="description">Description</label>
-          <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span> 
+          <span class="errortext" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span> 
         </div>
       </div>
       <div class="row">
@@ -51,7 +51,7 @@
         <div class="row">
           <textarea th:field="*{notes}" id="notes" class="materialize-textarea" placeholder="Notes"></textarea>
           <label for="notes">Notes</label>
-          <span th:if="${#fields.hasErrors('notes')}" th:errors="*{notes}"></span>
+          <span class="errortext" th:if="${#fields.hasErrors('notes')}" th:errors="*{notes}"></span>
         </div>
       </div>
       <div class="row">
