Replaced header at login

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<header th:replace="header :: header">...</header>
+<header th:replace="headerLogin :: header">...</header>
 
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
